Add a show target

--- a/waking-up-with-perl6/Makefile
+++ b/waking-up-with-perl6/Makefile
@@ -1,4 +1,4 @@
-.PHONY: clean
+.PHONY: clean show view
 
 PROJECT_NAME = waking-up-with-perl6
 PDF = $(PROJECT_NAME).pdf
@@ -6,6 +6,8 @@ TEX = $(PROJECT_NAME).tex
 
 $(PDF): $(TEX)
 	pdflatex $<
+
+show: view
 
 view: $(PDF)
 	evince $< & 2> /dev/null
